--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <html>
 
 <head>
-    <link rel="shortcut icon" href="resources/logos/mini.png" />
+    <link rel="shortcut icon" href="resources/logos/logo1.jpg" />
     <title>Proyecto</title>
     <link rel='stylesheet' href='styles.css'>
 
 <header>
-
+   
 <div class="inicio">
 <div class="logo-inicio">
-    <img src="resources/logos/Logo2.jpg" class="logo-inicio" alt="Logo"/>
+    <img src="resources/logos/logo1.jpg" class="logo-inicio" alt="Logo"/>
 </div>
 
 <div class="menu-inicio">
 <ul class="lista-inicio">
-<li class="opciones-lista-inicio">  <a href="#" id="registroLink" class="aa">Option 1</a></li>
+<li class="opciones-lista-inicio">  <a href="buscar.html" id="ProductosLink" class="aa">Buscar</a></li>
 <li class="opciones-lista-inicio">  <a href="productos.html" id="ProductosLink" class="aa">Productos</a></li>
-<li class="opciones-lista-inicio">  <a href="#" id="infoLink" class="aa">Sobre Nosotros</a></li>
+<li class="opciones-lista-inicio">  <a href="info.html" id="infoLink" class="aa">Sobre Nosotros</a></li>
 
 </ul>
 </div>
@@ -32,36 +32,36 @@
 <div class="banner-contenedor">
     
     <div class="logo-banner">
-<img src="resources/logos/Logo.jpg" alt="Logo" class="logito"/>
+<img src="resources/logos/logo2.jfif" alt="Logo" class="logito"/>
 </div>
 <div class="banner-cont">
-<img src="resources/images/banner.png" alt="" class="bane"/>
+<img src="resources/logos/banner1.png" alt="" class="banner"/>
 </div>
 
 </div>
 </section>
 
-<section class="prom">
-    <div class="textodiv">
-<p class="promtext"> <marquee>Encuentra lo necesario para tus proyectos</marquee></p>
-</div>
-</section>
+
 <section class="productos-Index">
-    <h1>Podria interesarte</h1>
+    <h1>Nuestros Productos más Vendidos</h1>
 
     <div class="productos-index-container1">
      <div class="texto-productos-index">
-        <h1>Taladro Eléctrico</h1>
-        <p>Herramienta eléctrica utilizada para perforar materiales como madera, metal y plástico. Ideal para proyectos de bricolaje y reparaciones en el hogar.
+        <h1>Extensiones</h1>
+        <p>Nuestras extensiones de corriente están diseñadas para ofrecer una conexión segura y confiable en cualquier entorno, desde el hogar hasta el trabajo. Fabricadas con materiales de alta calidad y protección contra sobrecargas, estas extensiones son perfectas para conectar múltiples dispositivos sin preocupaciones.
 </div>
-
+<div class="images-productos-index">
+    <img src="resources/images/productos/Instrumentos/extensiones.jpg" alt="Extensiones de todo tipo">
+</div>
 
     </div>
     <div class="productos-index-container2">
-  
+    <div class="images-productos-index">
+        <img src="resources/images/productos/Instrumentos/Taladro.jfif" alt="Taladro de excelente calidad">
+    </div>
     <div class="texto-productos-index">
-        <h1>Destornillador Multiherramienta</h1>
-        <p>Herramienta versátil que combina varios tipos de puntas (plana, Phillips, hexagonal) en un solo dispositivo. Perfecta para ajustes y ensamblajes de muebles y equipos.
+        <h1>Taladro Automático</h1>
+        <p>¡Facilita tus proyectos con el taladro automático de alta precisión! Diseñado para profesionales y entusiastas del bricolaje, este taladro cuenta con un motor potente y velocidades ajustables, ideal para trabajar en materiales como madera, metal y concreto. Su sistema automático permite perforaciones continuas sin esfuerzo, reduciendo el tiempo de trabajo y garantizando resultados uniformes.
     </div>
 </div>
 </section>
@@ -70,8 +70,8 @@
 </section>
 <footer class="contacto-Maquetacion">
 <div class="contact">
-<p>Ferreteria
-<p>3245498181
+<p>RepairTools.com
+<p>3015051174
 </div>
 
 
@@ -80,7 +80,7 @@
 
 <script src="productos.js"></script>
 <script src="script.js"></script>
-<script src="xd.js"></script>
+
 </body>
 
 </html>
